commit tree 8ce44c32cf6eafcb4ae0954beb354b20c1d85e6d

--- a/fait.html
+++ b/fait.html
@@ -11,12 +11,7 @@
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> 
-        <a href="new-properties.html">New Properties</a> 
-        <a href="real-estate-listings.html">Listings</a> 
-        <a href="market-report.html">Market Report</a> 
-        <a href="contact.html">Contact</a> 
-        <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
@@ -32,44 +27,41 @@
     <br>
 
     <section id="details">
-      <div class="grid-container">
-        <div class="grid-item">
-          <h3>Contact</h3>
-          <p>
-            <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-            +1 710 555 1234<br>
-            @fakeRealty
-          </p>  
-        </div>
+      <div>
+        <h3>Contact</h3>
+        <p>
+          <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
+          +1 710 555 1234<br>
+          @fakeRealty
+        </p>
+      </div>
+      
+      <div>
+        <h3>Correspondence</h3>
+        <p>
+          Exceptional Realty<br>
+          P.O. Box 5555<br>
+          Brooklyn, NY 11201
+        </p>
+      </div>
 
-        <div class="grid-item">
-          <h3>Correspondence</h3>
-          <p>
-            Exceptional Realty<br>
-            P.O. Box 5555
-            Brooklyn, NY 11201
-          </p>
-        </div>
+      <div>
+        <h3>Links</h3>
+        <p>
+          <a href="#" target="_blank">Home Restoration</a><br>
+          <a href="#" target="_blank">Affordable Mortgages</a><br>
+          <a href="#" target="_blank">Professional Moving Crew</a>
+        </p>
+      </div>
 
-        <div class="grid-item">
-          <h3>Links</h3>
-          <p>
-            <a href="#" target="_blank">Home Restoration</a><br>
-            <a href="#" target="_blank">Affordable Mortgages</a><br>
-            <a href="#" target="_blank">Professional Moving Crew</a>
-          </p>
-        </div>  
-        
-        <div class="grid-item">
-          <h3>Follow</h3>
-          <p>
-            <a href="#" target="_blank">YouTube</a><br>
-            <a href="#" target="_blank">Facebook</a><br>
-            <a href="#" target="_blank">Twitter</a>
-          </p>
-        </div>
-
-      </div> 
+      <div>
+        <h3>Follow</h3>
+        <p>
+          <a href="#" target="_blank">YouTube</a><br>
+          <a href="#" target="_blank">Facebook</a><br>
+          <a href="#" target="_blank">Twitter</a>
+        </p>
+      </div>
     </section>
   </body>
 </html>
